--- a/CSS/prodotti_style.css
+++ b/CSS/prodotti_style.css
@@ -138,7 +138,6 @@ body, html {
         display: block;
         width: 100%;
         height: 100%;
-        box-shadow: 5px 0px 10px black;
         opacity: 1;
     }
 
@@ -205,12 +204,7 @@ body, html {
 
         .container_intro .container_caratteristiche .container_caratteristica{
             flex-basis: 33%;
-            height: 350px;
-        }
-
-        .container_intro .container_caratteristiche .container_caratteristica:hover{
-            transform: translateY(-30px);
-            transition: transform 1s ease;
+            height: 370px;
         }
 
     }
@@ -231,6 +225,11 @@ body, html {
 
         .container_intro .container_caratteristiche .container_caratteristica{
             height: 400px;
+        }
+
+        .container_intro .container_caratteristiche .container_caratteristica:hover{
+            transform: translateY(-30px);
+            transition: transform 1s ease;
         }
 
         .container_intro .container_caratteristiche .container_caratteristica .container_descrizione .header_descrizione{
@@ -349,7 +348,7 @@ body, html {
 
         .sezione_prodotti{
             flex-wrap: nowrap;
-            align-items: stretch;
+            align-items: center;
             padding: 5% 10% 5% 10%;
             gap:40px;
         }
